<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home_drawer"
            android:title="@string/home_label"
            android:icon="@drawable/ic_home"/>
        <item android:id="@+id/rv_drawer"
            android:title="@string/rv_label"
            android:icon="@drawable/ic_return_visit"/>
        <item android:id="@+id/bs_drawer"
            android:title="@string/bs_label"
            android:icon="@drawable/ic_bible_studies"/>
        <item android:id="@+id/my_report_drawer"
            android:title="@string/my_report_label"
            android:icon="@drawable/ic_monthly_report"/>
        <item android:id="@+id/settings_drawer"
            android:title="@string/settings_label"
            android:icon="@drawable/ic_settings"/>
    </group>
</menu>