<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/m_padding"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/white">
        <TextView
            android:id="@+id/add_bs_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_details_below"
            android:layout_margin="@dimen/m_padding"
            android:textSize="@dimen/nav_header_text_size"/>
        <EditText
            android:id="@+id/edit_bs_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_bs_header"
            android:hint="@string/ent_rv_name"
            android:layout_margin="@dimen/content_padding"
            android:padding="@dimen/content_padding"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edit_bs_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_bs_name"
            android:hint="@string/ent_rv_address"
            android:layout_margin="@dimen/content_padding"
            android:padding="@dimen/content_padding"
            android:inputType="text" />
        <EditText
            android:id="@+id/edit_bs_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_bs_address"
            android:hint="@string/ent_rv_phone"
            android:layout_margin="@dimen/content_padding"
            android:padding="@dimen/content_padding"
            android:inputType="phone"/>
        <LinearLayout
            android:id="@+id/date_time_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_bs_phone"
            android:weightSum="2"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <Spinner
                android:id="@+id/visit_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding"
                android:entries="@array/days_of_week"
                android:spinnerMode="dialog"
                android:prompt="@string/dow_hint"
                android:layout_weight="1">

            </Spinner>

            <TextView
                android:id="@+id/visit_time"
                android:layout_width="0dp"
                android:text="@string/time_label"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding"
                android:hint="@string/time_label_hint"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|end"
                android:drawableLeft="@drawable/ic_arrow_drop_down_black_24dp"
                android:background="@android:color/transparent"
                android:textAlignment="textEnd"
                android:onClick="setTimeForRV"/>
        </LinearLayout>

        <Button
            android:id="@+id/save_bs_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_padding"
            android:text="@string/save_l"
            android:background="@color/florom_colorDark"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/date_time_cont"
            android:layout_margin="@dimen/m_padding"
            android:onClick="saveBSEditBtn"/>
</RelativeLayout>
</ScrollView>